<resources>
    <string name="app_name">Chose It</string>

    <string name="welcome_title">Добро пожаловать</string>
    <string name="welcome_text">В первую социальную сеть, построенную на выборе</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="login">Войти</string>
    <string name="create_by">Проект создал @dimkashelk</string>
    <string name="registration">Регистрация</string>

    <string name="password">Пароль (минимум 8 символов)</string>
    <string name="re_type_password">Повторите пароль</string>
    <string name="email">Почта</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="tag_create_account">Зарегиструйтесь, чтобы получить доступ к опросам</string>
    <string name="tag_login">Войдите, чтобы получить доступ к опросам</string>
    <string name="already_has_account">Уже есть аккаунт?</string>
    <string name="short_name">Логин</string>
    <string name="already_dont_has_account">Ещё нет аккаунта?</string>
    <string name="login_input">Логин/почта</string>
    <string name="wrong_login_data">Неправильный логин или пароль</string>
    <string name="error_first_name">Имя должно содержать только а-я, А-Я</string>
    <string name="error_second_name">Фамилия должна содержать только а-я, А-Я</string>
    <string name="error_login">Логин должен содержать только a–z, 0–9</string>
    <string name="not_free_login">Данный логин уже занят, попробуйте другой</string>
    <string name="free_login">Данный логин свободен</string>
    <string name="error_email">Используйте существующий адрес электронной почты</string>
    <string name="not_free_email">Данная почта уже занята, попробуйте другую</string>
    <string name="free_email">Данная почта свободна</string>
    <string name="error_password">Пароль должен содержать только a–z, A–Z, 0–9, !@#$%,^:&amp;?()*/-+[], минимальная длина - 8 символов</string>
    <string name="error_re_password">Пароль должен с тем, что вы ввели в предыдущем поле</string>
    <string name="register">Зарегистрируйтесь</string>
    <string name="forgot_password_title">Забыли пароль?</string>
    <string name="forgot_password">Восстановите доступ</string>
    <string name="forgot_password_error">Данная почта не найдена</string>
    <string name="tag_forgot_password">Введите почту, к которой был привязан аккаунт</string>
    <string name="get_verify_code">Получить код</string>
    <string name="verify_code">Код подтверждения</string>
    <string name="enter_new_password">Введите новый пароль</string>
    <string name="re_enter_new_password">Повторите новый пароль</string>
    <string name="wrong_verify_code">Неверный код подтверждения</string>
    <string name="check_verify_code">Проверить код подтверждения</string>
    <string name="ok_verify_code">Верный код</string>
    <string name="change_password">Изменить пароль</string>
    <string name="tag_verify_code">Введите код подтверждения, отправленный на почту, и введите новый пароль</string>
    <string name="home">Главная</string>
    <string name="friends">Друзья</string>
    <string name="create_survey">Создать опрос</string>
    <string name="search">Поиск</string>
    <string name="my_page">Моя страница</string>
    <string name="survey">Опросы</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="your_friends">Ваши друзья</string>
    <string name="your_survey">Ваши опросы</string>
    <string name="favorite">Избранное</string>
    <string name="archive">Архив</string>
    <string name="basic_parameters">Основные параметры</string>
    <string name="old_password">Старый пароль</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="re_enter_password">Повторите\nпароль</string>
    <string name="reset_all">Сбросить все</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="profile">Профиль</string>
    <string name="create">Создать</string>
    <string name="main_page">Главная</string>
    <string name="filters">Фильтры</string>
    <string name="news_feed">Лента</string>
    <string name="show_all">Показать все</string>
    <string name="sort">Сортировать</string>
    <string name="by_date">По дате</string>
    <string name="by_popular">По популярности</string>
    <string name="by_active">По активности</string>
    <string name="decreasing">Убывание</string>
    <string name="increasing">Возрастание</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="apply">Применить</string>
    <string name="by_age">По возрасту</string>
    <string name="age">Возраст</string>
    <string name="active">Активность</string>
    <string name="online">Онлайн</string>
    <string name="offline">Офлайн</string>
    <string name="by_count_surveys">По количеству опросов</string>
    <string name="parameters">Параметры</string>
    <string name="persons">Люди</string>
    <string name="count_questions">Количество вопросов</string>
    <string name="by_friends">От друзей</string>
    <string name="results">Результаты</string>
    <string name="settings">Настройки</string>
    <string name="send_to_friends">Отправить друзьям</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="add_to_archive">Добавить в архив</string>
    <string name="only_for_friends">Только для друзей</string>
    <string name="statistic">Статистика</string>
    <string name="anonymous">Анонимная</string>
    <string name="public_survey">Публичная</string>
    <string name="select_all">Выбрать всех</string>
    <string name="new_survey">Новый опрос</string>
    <string name="remove_all">Убрать выделение</string>
    <string name="title">Название</string>
    <string name="error_survey_title"><![CDATA[Название должно содержать только а…я, А…Я, 0–9, !@#$%,^:&amp;?()*/-+[] и пробелы]]></string>
    <string name="description">Описание</string>
    <string name="content">Содержание</string>
    <string name="survey_add">Добавьте от 2 до 16 вариантов, чтобы создать опрос</string>
    <string name="add">Добавить</string>
    <string name="time">Время доступа</string>
    <string name="no_limits">Без ограничений</string>
    <string name="change">Изменить</string>
    <string name="request">Запрос</string>
    <string name="surveys">Опросы</string>
    <string name="end">Закончить досрочно</string>
    <string name="begin_again">Пройти заново</string>
    <string name="history">История</string>
    <string name="make_survey">Пройти опрос</string>
    <string name="information">Информация</string>
    <string name="close">Закрыть</string>
    <string name="finish">Закончить опрос</string>
    <string name="by_alphabet">По алфавиту</string>
    <string name="in_dev">Раздел в разработке</string>
</resources>