<?xml version='1.0' encoding='utf-8'?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetCreateAccount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/bottomSheetCreateAccountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/bottomSheetCreateAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/tag"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/bottomSheetCreateAccountFirstName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_custom"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/bottomSheetCreateAccountSecondName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_custom"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/second_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/bottomSheetCreateAccountShortName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_custom"
        android:clickable="false"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/short_name"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/bottomSheetCreateAccountEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_custom"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/bottomSheetCreateAccountPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_custom"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/bottomSheetCreateAccountRePassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/input_custom"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/re_type_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/bottomSheetCreateAccountButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:padding="15dp"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:background="@drawable/button_with_corner_radius"
        app:cornerRadius="15dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="30sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_has_account"
            android:gravity="center"
            android:fontFamily="@font/montserrat_regular"
            android:paddingEnd="5sp"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/bottomSheetCreateAccountLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/login"
            android:fontFamily="@font/montserrat_regular"
            android:focusable="true"
            android:textColor="@color/pink_700"/>
    </LinearLayout>
</LinearLayout>