<?xml version='1.0' encoding='utf-8'?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/bottomSheetLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/bottomSheetLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/tag_login"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/bottomSheetLoginLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_custom"
        android:clickable="false"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/login_input"
        android:inputType="text|textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/bottomSheetLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/input_custom"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />


    <Button
        android:id="@+id/bottomSheetLoginButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_with_corner_radius_not_flooded"
        android:fontFamily="@font/montserrat_regular"
        android:padding="15dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/already_dont_has_account"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/bottomSheetLoginCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/register"
            android:textColor="@color/pink_700" />
    </LinearLayout>
</LinearLayout>
