<?xml version='1.0' encoding='utf-8'?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetVerifyCode"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <TextView
        android:id="@+id/bottomSheetVerifyCodeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/bottomSheetVerifyCodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/tag_verify_code"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bottomSheetVerifyCodeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/verify_code"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:errorTextColor="@color/purple_700">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bottomSheetVerifyCodeCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bottomSheetVerifyCodePasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/enter_new_password"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:endIconMode="password_toggle"
        app:errorContentDescription=""
        app:errorTextColor="@color/purple_700">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bottomSheetVerifyCodePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bottomSheetVerifyCodeRePasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/re_enter_new_password"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:endIconMode="password_toggle"
        app:errorContentDescription=""
        app:errorTextColor="@color/purple_700">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bottomSheetVerifyCodeRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/bottomSheetVerifyCodeButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_with_corner_radius_not_flooded"
        android:fontFamily="@font/montserrat_regular"
        android:padding="15dp"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:initialCornerAngle="15dp"
        app:spinning_bar_color="@color/purple_700"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/already_has_account"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/bottomSheetVerifyCodeLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/login"
            android:textColor="@color/purple_700" />
    </LinearLayout>
</LinearLayout>
