<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/welcome_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="-50dp"
            android:scaleType="centerInside"
            card_view:srcCompat="@drawable/ic_welcome"
            tools:srcCompat="@drawable/ic_welcome" />

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/welcome_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/montserrat_thin"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="15dp"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            card_view:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_account"
            style="@style/Base.TextAppearance.MaterialComponents.Button.Outline"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_regular"
            android:padding="15dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="15dp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
